uvote-platform/k8s/overlays/production/url-env-admin-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
spec:
  template:
    spec:
      containers:
        - name: admin-service
